--- a/angular/tpl/blocks/modals/otpModal.html
+++ b/angular/tpl/blocks/modals/otpModal.html
@@ -13,9 +13,14 @@
   <form name="otpform" class="form-horizontal" novalidate ng-submit="verifyotp(otpform);">
   <div class="custom-modal-body bt-1">
 
-     <div class="m-b-sm">
-        <input type="text" class="form-control" id="user-otp" ng-model="otpData.otp" name="otp" numbers-only placeholder="Enter recevived OTP in your Mobile" required minlength="6" maxlength="6">
-     </div>
+     <div class="multi-input-wrapper">
+         <input type="text" class="form-control" id="user-otp" ng-model="otpData.otp" name="otp" numbers-only placeholder="Enter recevived OTP in your Mobile" required minlength="6" maxlength="6">
+         <input type="text" class="form-control" value="" placeholder="0" />
+         <input type="text" class="form-control" value="" placeholder="0" />
+         <input type="text" class="form-control" value="" placeholder="0" />
+         <input type="text" class="form-control" value="" placeholder="0" />
+         <input type="text" class="form-control" value="" placeholder="0" />
+      </div>
      <span ng-messages="otpform.otp.$error" role="alert" class="otp-errormsg"><span class="text-danger" ng-message="required">OTP Required</span><span class="text-danger"ng-message="minlength">Atleast 6 characters long.</span></span>
    </div>
    <div class="custom-modal-footer text-center bt-1">
